# insomnilog

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICES  README.md  jreleaser.yml  justfile
.github/: CODEOWNERS
.github/workflows/: auto-approve.yml  ci.yml  release.yml
examples/: Cargo.toml
examples/examples/: basic_usage.rs
examples/src/: main.rs
insomnilog/: Cargo.toml
insomnilog/src/: backend.rs  backend_runner.rs  decode.rs  encode.rs  formatter.rs  frontend.rs  level.rs  lib.rs  lifecycle.rs  logger.rs  macros.rs  metadata.rs  per_thread_queue.rs  queue.rs  queue2.rs  record.rs  sink.rs  testutil.rs
insomnilog/src/legacy/: backend.rs  decode.rs  formatter.rs  frontend.rs  macros.rs  metadata.rs  mod.rs  queue.rs  sink.rs
insomnilog/tests/: end_to_end.rs  lifecycle.rs  realtime.rs
