[workspace]
members = [
    "insomnilog",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
authors = ["Dwayne Steinke <ds424@d-steinke.de>"]
license = "MIT"
repository = "https://github.com/DS424/insomnilog"
readme = "README.md"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
missing_safety_doc = "warn"
empty_line_after_outer_attr = "warn"
empty_line_after_doc_comments = "warn"

[patch.crates-io]
insomnilog = { path = "insomnilog" }

