[package]
name = "insomnilog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "An asynchronous Rust logging library that never blocks"
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["async", "logging", "log", "non-blocking"]
categories = ["development-tools::debugging"]

[dependencies]
rtsan-standalone = { version = "0.3.0", optional = true }

[features]
rtsan = ["dep:rtsan-standalone"]

[lints]
workspace = true
